# openvasreporting

./: .gitignore  .readthedocs.yaml  CHANGELOG  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  __init__.py  openvasreporting.py  pyproject.toml  requirements-devel.txt  requirements.txt  setup.cfg  setup.cfg.bak  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  pythonpublish.yml  stale.yml
docs/: Makefile  changelog.rst  conf.py  config-sample.yml  index.rst
docs/usage/: config-file.rst  export-csv-host.rst  export-csv-summary.rst  export-csv.rst  export-excel-host.rst  export-excel.rst  export-word.rst  export.rst  filters.rst  index.rst  install.rst
libs/: __init__.py  config.py  export.py  parsed_data.py  parser.py
openvas_to_report/: README.rst  api.py  openvas_cutter.py  openvas_to_document.py
openvas_to_report/doc/en/source/: as_a_library.rst  conf.py  index.rst  openvas_cutter.rst  openvas_to_document.rst  quickstart.rst
openvas_to_report/doc/images/: logo.xcf
openvas_to_report/examples/: __init__.py  airplay.xml
openvas_to_report/libs/data/: __init__.py  config.py  parsed_data.py
openvas_to_report/libs/exporters/: excel.py  word.py
openvas_to_report/libs/parsers/: openvas_parser.py
openvas_to_report/libs/translations/: __init__.py
openvas_to_report/libs/translations/excel/: en.json  es.json
openvas_to_report/test/: test_data.py  test_exporter_excel.py  test_exporters_word.py  test_parsers_openvas_parser.py  test_translations.py
openvasreporting/: __init__.py  __main__.py  openvasreporting.py
openvasreporting/libs/: config.py  export.py  parsed_data.py  parser.py
openvasreporting/src/: __init__.py  openvas-template.docx
