[metadata]
name = OpenVAS Reporting
version = 1.9.9
description = A tool to convert OpenVAS XML into reports.
long_description = file: README.md, LICENSE, CHANGELOG
long_description_content_type = text/markdown

author = TheGroundZero (@DezeStijn)
author_email = 2406013+TheGroundZero@users.noreply.github.com
maintainer = Eduardo Ferreira (@dudacgf)
maintainer_email = does-not-exist-yet@nowhere-to-be-found
url =  https://github.com/TheGroundZero/openvasreporting
project_urls =
    Source Code = https://github.com/TheGroundZero/openvasreporting
    Documentation = https://openvas-reporting.stijncrevits.be
    Issues = https://github.com/TheGroundZero/openvasreporting/issues/

license = GPL-3.0-or-later
keywords = OpenVAS OpenVAS-reports Excel xlsxwriter xlsx reporting reports report
classifiers =
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Framework :: Sphinx
   Intended Audience :: Developers
   Intended Audience :: End Users/Desktop
   Intended Audience :: Information Technology
   Intended Audience :: Other Audience
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
   Natural Language :: English
   Operating System :: MacOS
   Operating System :: Microsoft :: Windows
   Operating System :: POSIX
   Operating System :: Unix
   Programming Language :: Python
   Topic :: Documentation :: Sphinx
   Topic :: Internet :: Log Analysis
   Topic :: Security

[options]
include_package_data = True
packages = find:
install_requires =
    xlsxwriter>=1.0.0
    python-docx>=0.8.7
    matplotlib>=2.2.2
    netaddr>=0.8.0
python_requires = >=3.7

[options.packages.find]
include = 
    openvasreporting
    openvasreporting.libs

[options.entry_points]
console_scripts = 
    openvasreporting = openvasreporting:main

[options.package_data]
#* = openvasreporting/src/openvas-template.docx
openvasreporting = src/openvas-template.docx




